--- a/app/src/main/res/layout/want_to_books_fragment.xml
+++ b/app/src/main/res/layout/want_to_books_fragment.xml
@@ -14,7 +14,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Хочу прочесть"
+            android:text="Мои книги"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
