--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_home"
         android:title="@string/main"
-        android:icon="@drawable/ic_baseline_home_24" />
-    <item android:id="@+id/action_books"
-        android:title = "@string/books"
-        android:icon="@drawable/ic_baseline_menu_book_24" />
+        android:icon="@drawable/home" />
+    <item android:id="@+id/add_book"
+        android:title = "@string/add_book"
+        android:icon="@drawable/add" />
     <item android:id="@+id/action_profile"
         android:title="@string/profile"
-        android:icon="@drawable/ic_baseline_person_24" />
+        android:icon="@drawable/user" />
 </menu>
