--- a/app/src/main/res/layout/fragment_book_description.xml
+++ b/app/src/main/res/layout/fragment_book_description.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.bookshare.presentation.vm.BookViewModel" />
+            type="com.example.bookshare.presentation.vm.AllBooksViewModel" />
     </data>
 
 
