--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.bookshare.presentation.vm.BookViewModel" />
+            type="com.example.bookshare.presentation.vm.AllBooksViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
