Add new book to all and profile

--- a/app/src/main/res/layout/book_add_fragment.xml
+++ b/app/src/main/res/layout/book_add_fragment.xml
@@ -9,6 +9,7 @@
         android:padding="4dp">
 
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -27,7 +28,6 @@
                 android:src="@drawable/add_book_fragment_book_img" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/book_name"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -35,12 +35,12 @@
                 android:hint="@string/add_book_fragment_book_name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/book_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/book_author"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,16 +48,28 @@
                 android:hint="Имя автора">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/book_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/add_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/add_book_text" />
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/add_book_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
