--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -50,6 +50,14 @@
             android:layout_marginTop="4dp"
             android:includeFontPadding="false"
             tools:text="By author" />
+
+        <TextView
+            android:id="@+id/book_sender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:includeFontPadding="false"
+            tools:text="By user" />
     </LinearLayout>
 
     <View
