--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#f4f4f4</color>
-    <color name="blue_main">#55ACEE</color>
+    <color name="green_main">#5BC0BE</color>
     <color name="blue_main_dark">#292F33</color>
     <color name="blue_main_secondary">#66757F</color>
 </resources>
