--- a/app/src/main/res/layout/book_add_fragment.xml
+++ b/app/src/main/res/layout/book_add_fragment.xml
@@ -51,14 +51,23 @@
                     android:id="@+id/book_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/add_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center"
+                app:icon="@drawable/ic_baseline_add_24"
+                android:text="@string/book_image" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/add_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                style="?attr/materialButtonOutlinedStyle"
                 android:text="@string/add_book_text" />
         </LinearLayout>
 
@@ -71,5 +80,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/book_imageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            tools:src="@drawable/ic_launcher_foreground"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
