--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -23,8 +23,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="4dp"
@@ -35,35 +34,77 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/profile_avatar"
-                    android:src="@drawable/ic_baseline_person_24" />
-            </androidx.cardview.widget.CardView>
+                    android:src="@drawable/ic_reading" />
+            </com.google.android.material.card.MaterialCardView>
 
-<!--            <TextView-->
-<!--                android:id="@+id/user_email"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="8dp"-->
-<!--                tools:text="@string/user_name"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/user_insta"
-                android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/customborder"
+            android:backgroundTint="#eeeeee">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                tools:text="@string/user_insta"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/user_telega"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:textColor="#70adb5"
+                    android:id="@+id/user_insta_placeholder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="100dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri_bold"
+                    android:gravity="center"
+                    android:text="@string/user_insta"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:textColor="#70adb5"
+                    android:id="@+id/user_telega_placeholder"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri_bold"
+                    android:gravity="center"
+                    android:text="@string/user_telega"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                tools:text="@string/user_telega"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/user_insta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="100dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri_medium"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    tools:text="@string/user_insta" />
+
+                <TextView
+                    android:id="@+id/user_telega"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri_medium"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    tools:text="@string/user_telega" />
+
+            </LinearLayout>
+        </LinearLayout>
 
 
 
@@ -102,6 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri"
                     android:gravity="center"
                     android:text="@string/number_of_books" />
 
@@ -110,6 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/hind_siliguri"
                     android:gravity="center"
                     android:text="@string/my_friends" />
 
@@ -159,3 +202,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
+
