--- a/app/src/main/res/layout/fragment_book_description.xml
+++ b/app/src/main/res/layout/fragment_book_description.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.bookshare.presentation.vm.BooksViewModel" />
+            type="com.aliyoungprog.presentation.vm.BooksViewModel" />
     </data>
 
 
