--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.aliyoungprog.presentation.vm.BooksViewModel" />
@@ -15,29 +14,27 @@
         android:layout_height="match_parent"
         tools:context=".presentation.fragment.HomeFragment">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
+
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:text="@string/available_books"
-            android:textColor="@color/green_main"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_margin="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:drawableEndCompat="@drawable/ic_search" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+<!--        app:drawableEndCompat="@drawable/ic_search"-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/new_books"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_height="0dp"
+
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/search_bar"
             tools:listitem="@layout/list_item_book" />
 
         <ProgressBar
