--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -3,118 +3,109 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_constraint"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
     android:layout_marginBottom="16dp"
     android:padding="8dp">
 
-    <View
-        android:id="@+id/view1"
-        android:layout_width="2dp"
-        android:layout_height="30dp"
-        android:background="@color/grey"
-        app:layout_constraintEnd_toEndOf="@id/book_image"
-        app:layout_constraintStart_toStartOf="@id/book_image"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <View-->
+<!--        android:id="@+id/view1"-->
+<!--        android:layout_width="2dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:background="@color/grey"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/book_image"-->
+<!--        app:layout_constraintStart_toStartOf="@id/book_image"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <ImageView
         android:id="@+id/book_image"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:contentDescription="@string/books_description"
-        android:src="@drawable/ic_baseline_menu_book_24"
+        tools:src="@drawable/ic_baseline_menu_book_24"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view1"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:alpha="0.5"/>
 
-    <LinearLayout
-        android:id="@+id/authot_ll"
+    <TextView
+        android:id="@+id/book_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toEndOf="@id/book_image"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/ic_reading" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/book_author"
-                android:fontFamily="@font/hind_siliguri"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:includeFontPadding="false"
-                android:textColor="@color/green_main"
-                tools:text="By author" />
-
-            <TextView
-                android:id="@+id/book_sender"
-                android:fontFamily="@font/hind_siliguri"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:includeFontPadding="false"
-                tools:text="By user" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/book_info_linear_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:orientation="vertical"
+        android:fontFamily="@font/hind_siliguri_bold"
+        android:textColor="#424B54"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/book_image"
-        app:layout_constraintTop_toBottomOf="@id/authot_ll">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Book name" />
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/authot_ll"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="26dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintStart_toEndOf="@id/book_image"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <de.hdodenhof.circleimageview.CircleImageView-->
+<!--            android:layout_width="32dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:src="@drawable/ic_reading" />-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:orientation="vertical">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/book_author"-->
+<!--                android:fontFamily="@font/hind_siliguri"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:includeFontPadding="false"-->
+<!--                android:textColor="@color/green_main"-->
+<!--                tools:text="By author" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/book_sender"-->
+<!--                android:fontFamily="@font/hind_siliguri"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:includeFontPadding="false"-->
+<!--                tools:text="By user" />-->
+
+<!--        </LinearLayout>-->
 
 
-        <TextView
-            android:id="@+id/book_name"
-            android:fontFamily="@font/hind_siliguri_bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#424B54"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="Book name" />
+<!--    </LinearLayout>-->
 
-        <TextView
-            android:id="@+id/title_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:visibility="gone"
-            tools:text="Genre" />
+<!--    <LinearLayout-->
+<!--        android:id="@+id/book_info_linear_layout"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="14dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@id/book_image"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/authot_ll">-->
 
 
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/title_name"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:visibility="gone"-->
+<!--            tools:text="Genre" />-->
 
-    <View
-        android:id="@+id/view2"
-        android:layout_width="2dp"
-        android:layout_height="30dp"
-        android:background="@color/grey"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/book_image"
-        app:layout_constraintStart_toStartOf="@id/book_image"
-        app:layout_constraintTop_toBottomOf="@+id/book_image" />
 
+<!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
